# LibraryManagementSystem

./: .gitmodules  CMakeLists.txt  README.md
lib/: AppConfig.h.in
lib/app/: CMakeLists.txt  constants.h
lib/app/controller/: Database.cpp  Database.h  Library.cpp  Library.h
lib/app/models/: Book.cpp  Book.h  History.cpp  History.h  Member.cpp  Member.h  model.cpp  model.h  register.cpp  register.h
src/: gui.cpp  gui.h  main.cpp
src/gui/: BookListCtrl.cpp  BookListCtrl.h  SearchBookDialog.cpp  SearchBookDialog.h  bookitem.h  id.h  mainwindow.cpp  mainwindow.h
src/gui/components/dialog/: AddBookDialog.cpp  AddBookDialog.h  AddMemberDialog.cpp  AddMemberDialog.h  SearchMemberDialog.cpp  SearchMemberDialog.h
src/gui/components/listctrl/: MemberListCtrl.cpp  MemberListCtrl.h  ReturnTnxListCtrl.cpp  ReturnTnxListCtrl.h
src/gui/tabs/: BookTabPage.cpp  BookTabPage.h  LendTabPage.cpp  LendTabPage.h  MemberTabPage.cpp  MemberTabPage.h  ReturnTabPage.cpp  ReturnTabPage.h
test/: AppTest.cpp  CMakeLists.txt  ModelTest.cpp
